--- a/packages/tools/docusaurus/docs/guides/components/extend.mdx
+++ b/packages/tools/docusaurus/docs/guides/components/extend.mdx
@@ -11,7 +11,7 @@ import Admonition from 'react-admonitions';
 ## Extension process
 
 <Admonition type="tip" title="Adaptation process as a base line">
-  If you've read our guide ["Adapt a component"](./adapt.mdx) you probably already know this:
+  If you've read our ["Adapt a component"](./adapt.mdx) guide you probably already know this:
 
 This guide expects you to reduce the set of props offered by **kickstartDS** components, when used as a base component. We'll also skip over, or significantly shorten, parts already covered by that guide. If unsure about something, best cross-reference it!
 
