--- a/packages/tools/docusaurus/docs/guides/create/components.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/components.mdx
@@ -13,8 +13,6 @@ Now we'll get to the meat of it... adding our first set of components based on *
 3. **Adding a `Teaser Card` component**<br/>based on `@kickstartds/base/lib/teaser-box`,<br/>to show the process of **creating** a new component
 4. **Adding a `Section` component**<br/>based on `@kickstartds/base/lib/section`,<br/>to show the process of **extending** an existing component
 
-TODO any ideas on where we could add some custom **JavaScript** and custom **CSS** / **SCSS**, to have that covered as part of the guide?
-
 We'll then build our first recipe, using all of the added components to create a teaser component for articles. Recipes are like loose blueprints, that should serve as an inspiration for how components can be combined and remixed, to fit a multitude of use cases! To learn more about recipes, and different kinds of components, we recommend reading **Brad Frosts** excellent article on ["design system components, recipes, and snowflakes"](https://bradfrost.com/blog/post/design-system-components-recipes-and-snowflakes/).
 
 And to bring it full circle, we will add that component to our _Welcome_ page to tease the main pages of our **Storybook**, as a quick entry for users!
@@ -276,6 +274,8 @@ We roughly see four different ways of adding a component to your Design System, 
 4. [**Extend** a component](#4-adding-our-own-section-component) (`Section`)
 
 We'll follow one guide for each of those general workflows, resulting in the four planned components being added to our Design System. In the real world the truth is not that clear cut, at least most of the time. Typically you'd probably have a mix of those scenarios.
+
+TODO document that it's okay to just follow the components as displayed in the linked guide, even if those propose first doing a Design System Initiative (for example).
 
 ### 1. Adding our own `Button` component
 
