--- a/packages/tools/docusaurus/docs/guides/examples/components/button.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/button.mdx
@@ -76,6 +76,8 @@ Defining the structure of a component means finding the [component API](../../..
 | `size`     | `enum`    | Size the button should be shown in             |
 | `disabled` | `boolean` | Whether the button should be shown as disabled |
 
+Fields that should be required are marked with a `*`.
+
 ## 2. Component Creation
 
 We like to colocate components. This means to have all involved files next to each other in the same folder; the template (`.jsx` / `.tsx`), potential CSS / SASS (`.css` / `.scss`), JavaScript (`.js` / `.ts`), our JSON Schema component definition (`.schema.json`), and so on.
