--- a/packages/tools/docusaurus/docs/guides/examples/components/headline.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/headline.mdx
@@ -26,6 +26,8 @@ TODO describe workflow this stands for (adapt vs adopt)
 | `switchOrder` | `boolean` | Switch order of headline and subheadline |
 | `spaceAfter`  | `enum`    | (Optional) spacing after headline        |
 
+Fields that should be required are marked with a `*`.
+
 ## 2. Component Creation
 
 ### **JSON Schema** definition
