--- a/packages/tools/docusaurus/docs/guides/examples/components/section.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/section.mdx
@@ -30,6 +30,8 @@ TODO describe workflow this stands for (adapt vs adopt)
 | `inverted`    | `boolean`  | Show inverted version of section? |
 | `ctas`        | `object`   | Optional targets to link          |
 
+Fields that should be required are marked with a `*`.
+
 TODO should probably make sub fields of `ctas` explicit in table
 
 ## 2. Component Creation
