--- a/packages/tools/docusaurus/docs/guides/examples/components/teaser-card.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/teaser-card.mdx
@@ -25,6 +25,8 @@ TODO describe workflow this stands for (adapt vs adopt)
 | `inverted`   | `boolean` | Show inverted version of card?       |
 | `target *`   | `string`  | Target that should be linked         |
 
+Fields that should be required are marked with a `*`.
+
 ## 2. Component Creation
 
 ### **JSON Schema** definition
