--- a/packages/tools/docusaurus/docs/integration/storybook/stories.mdx
+++ b/packages/tools/docusaurus/docs/integration/storybook/stories.mdx
@@ -140,13 +140,11 @@ That's it, and as always this should help you focus on the important details! Ha
 
 This also works when working with more than one component:
 
-#### Complex example `Page`
+#### Complex example **Glossary** detail page
 
 TODO describe Recipe / Page usage and consumption of multiple Stories for easier / faster prototyping
 
-For a more complex example, involving multiple base components see the `Section` we've created in our ["Create your Design System" guide](../../guides/create/components.mdx):
-
-TODO find a fitting example involving importing from multiple stories
+Use this one: https://github.com/kickstartDS/kickstartDS-storybook/blob/master/src/Pages/BlogList.story.jsx
 
 #### In action
 
